--- a/sources/css/button.css
+++ b/sources/css/button.css
@@ -10,7 +10,8 @@
   z-index: 10;
   outline: none; }
   .Button:hover {
-    background: #27AF61; }
+    background: #27AF61;
+    border: 1px solid black; }
 
 .Button--addLocation {
   position: absolute;
