--- a/public/css/streetlives.css
+++ b/public/css/streetlives.css
@@ -432,6 +432,27 @@ body {
 
 /*# sourceMappingURL=location.css.map */
 
+.LocationForm {
+  position: absolute;
+  box-sizing: border-box;
+  background: #fff;
+  width: 500px;
+  height: 550px;
+  margin-left: -250px;
+  margin-top: -275px;
+  top: 50%;
+  left: 50%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 2px;
+  z-index: 1000; }
+
+.LocationForm-inner {
+  position: relative;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box; }
+
 .LocationForm-fields {
   font-family: 'Lato', sans-serif; }
 
@@ -444,27 +465,6 @@ body {
   margin: 0 0 10px 0;
   padding: 0 0 5px 0;
   border-bottom: 1px solid #ccc; }
-
-.LocationForm {
-  position: absolute;
-  box-sizing: border-box;
-  background: #fff;
-  width: 500px;
-  height: 550px;
-  margin-left: -250px;
-  margin-top: -275px;
-  top: 50%;
-  left: 50%;
-  z-index: 10;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  border-radius: 2px; }
-
-.LocationForm-inner {
-  position: relative;
-  padding: 20px;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box; }
 
 .LocationForm.is-hidden {
   display: none; }
