--- a/sources/css/app.css
+++ b/sources/css/app.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,300);
+@import url(//fonts.googleapis.com/css?family=Open+Sans);
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -59,15 +60,16 @@ table {
   padding: 20px;
   background: #333333;
   color: #FFFFFF;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   box-sizing: border-box; }
 
 .HeaderTitle {
   flex: 1;
   color: #FFFFFF;
-  font-size: 16px;
+  font-size: 20px;
   text-decoration: none;
-  text-transform: uppercase; }
+  text-transform: none;
+  font-family: 'Open Sans', sans-serif; }
 
 .HeaderItems {
   flex: 1;
@@ -82,14 +84,35 @@ table {
   outline: none;
   background: none;
   color: #FFFFFF;
-  font-size: 16px; }
+  font-size: 14px;
+  text-transform: uppercase;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: lighter; }
   .HeaderItem-link:hover {
-    text-decoration: underline;
-    cursor: pointer; }
+    text-decoration: none;
+    cursor: pointer;
+    animation-name: navBar-hover;
+    animation-duration: .3s;
+    color: #00D5A5; }
 
 .HeaderItem-link.is-selected {
-  color: #2ECC71; }
+  border: 1px solid #00D5A5; }
 
+@keyframes navBar-hover {
+  0% {
+    color: #FFFFFF; }
+  100% {
+    color: #00D5A5; } }
+@-webkit-keyframes navBar-hover {
+  0% {
+    color: #FFFFFF; }
+  100% {
+    color: #00D5A5; } }
+@keyframes btnInfo-hover {
+  0% {
+    background: #00D5A5; }
+  100% {
+    background: #53F9D4; } }
 .SearchField {
   position: absolute;
   width: 500px;
@@ -119,7 +142,7 @@ body,
   padding: 0; }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Open sans', sans-serif;
   background: #FFFFFF;
   font-size: 16px;
   line-height: 1.5;
