--- a/sources/css/location_information.css
+++ b/sources/css/location_information.css
@@ -1,5 +1,5 @@
 .LocationInformation {
-  font-family: 'Lato', sans-serif; }
+  font-family: 'Open Sans', sans-serif; }
 
 .LocationInformation-title {
   border-bottom: 1px solid #ccc;
@@ -18,7 +18,7 @@
   font-size: 14px; }
 
 .LocationInformation-fields {
-  font-family: 'Lato', sans-serif; }
+  font-family: 'Open Sans', sans-serif; }
 
 .LocationInformation-field {
   padding: 0 20px;
