--- a/sources/scss/location_information.scss
+++ b/sources/scss/location_information.scss
@@ -1,5 +1,5 @@
 .LocationInformation {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .LocationInformation-title {
@@ -22,7 +22,7 @@
 }
 
 .LocationInformation-fields {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .LocationInformation-field {
