--- a/sources/css/button.css
+++ b/sources/css/button.css
@@ -1,4 +1,5 @@
 .Button {
+  font-family: 'Open Sans', sans-serif;
   padding: 10px 16px;
   border: none;
   background: #2ECC71;
@@ -10,8 +11,7 @@
   z-index: 10;
   outline: none; }
   .Button:hover {
-    background: #27AF61;
-    border: 1px solid black; }
+    background: #27AF61; }
 
 .Button--addLocation {
   position: absolute;
