--- a/sources/css/location_form.css
+++ b/sources/css/location_form.css
@@ -1,5 +1,5 @@
 .LocationForm-fields {
-  font-family: 'Lato', sans-serif; }
+  font-family: 'Open Sans', sans-serif; }
 
 .LocationForm-field {
   margin: 0 0 20px 0; }
