--- a/sources/scss/app.scss
+++ b/sources/scss/app.scss
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,300);
+@import url(//fonts.googleapis.com/css?family=Open+Sans);
 
 @import 'reset';
 @import 'header';
@@ -13,7 +14,7 @@ body,
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Open sans', sans-serif;
   background: #FFFFFF;
   font-size: 16px;
   line-height: 1.5;
