--- a/sources/scss/button.scss
+++ b/sources/scss/button.scss
@@ -48,6 +48,15 @@
   }
 }
 
+.Button.is-disabled {
+  background-color: #DCDCDC;
+  box-shadow: 0px 3px 1px rgba(177, 175, 175, 0.9);
+  color: #848484;
+  &:hover {
+    background-color: #DCDCDC;
+  }
+}
+
 .Button.is-hidden {
   display: none;
 }
