--- a/sources/templates/comments_list.jst.ejs
+++ b/sources/templates/comments_list.jst.ejs
@@ -2,6 +2,7 @@
   <% comments.each(function(comment) { %>
   <li class="CommentList-item">
     <p>
+      <span class='CommentList-itemDate'><%- moment(comment.get('created_at')).format('MMMM Do YYYY') %></span>
       <%- comment.get('comment') %>
     </p>
   </li>
