--- a/sources/templates/location_form.jst.ejs
+++ b/sources/templates/location_form.jst.ejs
@@ -34,7 +34,7 @@
   </ul>
 
   <footer class="Footer">
-    <button class="Button js-ok"><%- title %></button>
+    <button class="Button js-ok is-disabled"><%- title %></button>
   </footer>
 
   <button class="Button Button--close js-cancel">✕</button>
