--- a/public/css/streetlives.css
+++ b/public/css/streetlives.css
@@ -173,6 +173,13 @@ body {
   .Button--close:hover {
     background: #f1f1f1; }
 
+.Button.is-disabled {
+  background-color: #DCDCDC;
+  box-shadow: 0px 3px 1px rgba(177, 175, 175, 0.9);
+  color: #848484; }
+  .Button.is-disabled:hover {
+    background-color: #DCDCDC; }
+
 .Button.is-hidden {
   display: none; }
 
@@ -189,11 +196,18 @@ body {
 .CommentList-item {
   margin: 0 10px 10px 0;
   padding: 0 0 10px 0;
-  border-bottom: 1px solid #DDD; }
+  border-bottom: 1px solid #CCC; }
   .CommentList-item:last-child {
     margin-bottom: 0;
     padding-bottom: 0;
     border: none; }
+
+.CommentList-itemDate {
+  text-align: right;
+  display: block;
+  margin: 0 0 3px 0;
+  font-size: 12px;
+  color: #666; }
 
 .Comments-inner {
   display: flex; }
@@ -208,6 +222,7 @@ body {
   height: 200px; }
 
 .Comments-content {
+  opacity: 0;
   flex: 1;
   padding: 0 20px 0 0; }
 
