Adds likes buttons

--- a/public/css/streetlives.css
+++ b/public/css/streetlives.css
@@ -183,6 +183,28 @@ body {
 .Button.is-hidden {
   display: none; }
 
+.LikeButton {
+  display: inline-block;
+  border: none;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  z-index: 10;
+  outline: none;
+  border: 1px solid #ddd;
+  background: #DDD; }
+  .LikeButton:hover {
+    border: 1px solid #ccc; }
+
+.LikeButtons {
+  margin: 0 0 10px 0; }
+
+.LikeButton--dislike {
+  background: #DDD; }
+
+.LikeButton.is-selected {
+  background: #CCC; }
+
 /*# sourceMappingURL=button.css.map */
 
 .Comments {
@@ -191,6 +213,7 @@ body {
   padding: 20px; }
 
 .CommentList {
+  opacity: 0;
   margin: 0 10px 20px 0; }
 
 .CommentList-item {
@@ -222,7 +245,6 @@ body {
   height: 200px; }
 
 .Comments-content {
-  opacity: 0;
   flex: 1;
   padding: 0 20px 0 0; }
 
