--- a/sources/templates/comments.jst.ejs
+++ b/sources/templates/comments.jst.ejs
@@ -7,6 +7,12 @@
     <div class="InputField InputField-area js-field">
       <textarea placeholder="Feel free to comment" class="Input InputArea js-comment"></textarea>
     </div>
-    <button class="Button js-ok">Add comment</button>
+
+    <div class="LikeButtons">
+      <button class="LikeButton js-like" data-value="1"></button>
+      <button class="LikeButton LikeButton--dislike js-like" data-value="0"></button>
+    </div>
+    
+    <button class="Button is-disabled js-ok">Add comment</button>
   </div>
 </div>
