--- a/sources/templates/comments_list.jst.ejs
+++ b/sources/templates/comments_list.jst.ejs
@@ -1,4 +1,4 @@
-<ul class="CommentList scroll-pane">
+<ul class="CommentList js-comment-list scroll-pane">
   <% comments.each(function(comment) { %>
   <li class="CommentList-item">
     <p>
