--- a/sources/scss/button.scss
+++ b/sources/scss/button.scss
@@ -61,3 +61,34 @@
   display: none;
 }
 
+
+.LikeButton {
+  display: inline-block;
+  border: none;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  z-index: 10;
+  outline: none;
+
+  border: 1px solid #ddd;
+  background: #DDD;
+
+  &:hover {
+    border: 1px solid #ccc;
+  }
+}
+
+.LikeButtons {
+  margin: 0 0 10px 0;
+}
+
+.LikeButton--dislike {
+  background: #DDD;
+}
+
+.LikeButton.is-selected {
+  background: #CCC;
+  &:hover {
+  }
+}
