--- a/public/css/streetlives.css
+++ b/public/css/streetlives.css
@@ -183,28 +183,6 @@ body {
 .Button.is-hidden {
   display: none; }
 
-.LikeButton {
-  display: inline-block;
-  border: none;
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-  z-index: 10;
-  outline: none;
-  border: 1px solid #ddd;
-  background: #DDD; }
-  .LikeButton:hover {
-    border: 1px solid #ccc; }
-
-.LikeButtons {
-  margin: 0 0 10px 0; }
-
-.LikeButton--dislike {
-  background: #DDD; }
-
-.LikeButton.is-selected {
-  background: #CCC; }
-
 /*# sourceMappingURL=button.css.map */
 
 .Comments {
@@ -420,6 +398,17 @@ body {
   margin: 0 -3px 0 0; }
 
 /*# sourceMappingURL=jquery.css.map */
+
+.LikeButtons {
+  margin: 0 0 10px 0; }
+
+.LikeButton--dislike {
+  background: #DDD; }
+
+.LikeButton.is-selected {
+  background: #CCC; }
+
+/*# sourceMappingURL=like_button.css.map */
 
 .LocationForm-fields {
   font-family: 'Lato', sans-serif; }
