--- a/sources/scss/app.scss
+++ b/sources/scss/app.scss
@@ -1,8 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700,300);
-
-@import 'reset';
-@import 'header';
-@import 'search';
+@import 'reset', 'font';
 
 html,
 body,
@@ -13,14 +9,18 @@ body,
 }
 
 body {
-  font-family: 'Lato', sans-serif;
   background: #FFFFFF;
   font-size: 16px;
   line-height: 1.5;
   color: #222326;
+  font-family: 'Lato', sans-serif;
   background-color: #f8f8f8;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   overflow:hidden;
+}
+
+a {
+  font-family: 'Lato', sans-serif;
 }
 
