--- a/sources/templates/comments.jst.ejs
+++ b/sources/templates/comments.jst.ejs
@@ -9,8 +9,11 @@
     </div>
 
     <div class="LikeButtons">
-      <button class="LikeButton js-like" data-value="1"></button>
-      <button class="LikeButton LikeButton--dislike js-like" data-value="0"></button>
+      <p class="LikeButtons-title">Recommend?</p>
+      <ul class="LikeButtons-list">
+        <li class="LikeButtons-listItem"><button class="LikeButton js-like" data-value="1"></button></li>
+        <li class="LikeButtons-listItem"><button class="LikeButton LikeButton--dislike js-like" data-value="0"></button></li>
+      </ul>
     </div>
     
     <button class="Button is-disabled js-ok">Add comment</button>
