--- a/sources/css/comment.css
+++ b/sources/css/comment.css
@@ -39,7 +39,7 @@
   flex: 1;
   padding: 0 20px 0 0; }
 
-.scroll-pane {
+.Comments .scroll-pane {
   width: 100%;
   height: 200px;
   overflow: auto; }
