--- a/sources/css/like_button.css
+++ b/sources/css/like_button.css
@@ -1,23 +1,32 @@
 .LikeButtons {
   margin: 0 0 10px 0; }
 
-.LikeButton {
+.LikeButtons-title {
+  margin: 0 0 3px 0;
+  font-size: 12px; }
+
+.LikeButtons-list {
+  display: inline-block; }
+
+.LikeButtons-listItem {
   display: inline-block;
+  margin: 0 5px 0 0; }
+
+.LikeButton {
+  display: block;
   border: none;
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   cursor: pointer;
   z-index: 10;
   outline: none;
-  border: 1px solid #ddd;
-  background: #DDD; }
-  .LikeButton:hover {
-    border: 1px solid #ccc; }
+  opacity: 0.7;
+  background: transparent url(/img/hand_up.png) no-repeat; }
 
 .LikeButton--dislike {
-  background: #DDD; }
+  background: transparent url(/img/hand_down.png) no-repeat; }
 
 .LikeButton.is-selected {
-  background: #CCC; }
+  opacity: 1; }
 
 /*# sourceMappingURL=like_button.css.map */
