--- a/sources/scss/like_button.scss
+++ b/sources/scss/like_button.scss
@@ -1,30 +1,40 @@
 .LikeButtons {
   margin: 0 0 10px 0;
 }
+.LikeButtons-title {
+  margin: 0 0 3px 0;
+  font-size: 12px;
+}
+
+.LikeButtons-list {
+  display: inline-block;
+}
+
+.LikeButtons-listItem {
+  display: inline-block;
+  margin: 0 5px 0 0;
+}
 
 .LikeButton {
-  display: inline-block;
+  display: block;
   border: none;
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   cursor: pointer;
   z-index: 10;
   outline: none;
+  opacity: 0.7;
 
-  border: 1px solid #ddd;
-  background: #DDD;
+  background: transparent url(/img/hand_up.png) no-repeat;
 
   &:hover {
-    border: 1px solid #ccc;
   }
 }
 
 .LikeButton--dislike {
-  background: #DDD;
+  background: transparent url(/img/hand_down.png) no-repeat;
 }
 
 .LikeButton.is-selected {
-  background: #CCC;
-  &:hover {
-  }
+  opacity: 1;
 }
