--- a/sources/templates/comments.jst.ejs
+++ b/sources/templates/comments.jst.ejs
@@ -1,6 +1,7 @@
 <div class="Comments-inner">
   <div class="Comments-content js-comments">
     <label class="LocationInformation-label">Comments</label>
+    <ul class="CommentList js-comment-list scroll-pane"></ul>
   </div>
   <div class="Comments-form">
     <label class="LocationInformation-label">Do you have something to add?</label>
