--- a/views/layout.html
+++ b/views/layout.html
@@ -3,7 +3,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=775, maximum-scale=1.0" />
+    <!-- <meta name="viewport" content="width=775, maximum-scale=1.0" /> -->
+    <meta name="viewport" content="initial-scale=1.0">
     <title>Streetlives NYC</title>
     <script src="//maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
 
